# Clade

./: .gitignore  BRAINSTORM.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOALS.md  IMPLEMENTATION_PLAN.md  LOOP_ARTIFACT.md  PROGRESS.md  README.md  README.zh-CN.md  REFERENCES.md  SECURITY.md  TODO.md  VERIFY.md  VISION.md  install.sh  loop-fix-debt.md  loop-gui-features.md  loop-phase7.md  loop-phase9-skills.md  loop-phase9-tui.md  tasks.txt  uninstall.sh
mcp-package/: README.md  pyproject.toml  server.json  skills.list
mcp-package/skills/audit/: SKILL.md  prompt.md
mcp-package/skills/batch-tasks/: prompt.md
mcp-package/skills/brief/: prompt.md
mcp-package/skills/commit/: SKILL.md  prompt.md
mcp-package/skills/cso/: prompt.md
mcp-package/skills/document-release/: SKILL.md  prompt.md
mcp-package/skills/frontend-design/: prompt.md
mcp-package/skills/go/: prompt.md
mcp-package/skills/handoff/: SKILL.md
mcp-package/skills/incident/: SKILL.md
mcp-package/skills/investigate/: SKILL.md  prompt.md
mcp-package/skills/loop/: SKILL.md
mcp-package/skills/map/: SKILL.md  prompt.md
mcp-package/skills/model-research/: prompt.md
mcp-package/skills/next/: SKILL.md  prompt.md
mcp-package/skills/orchestrate/: SKILL.md
mcp-package/skills/pickup/: prompt.md
mcp-package/skills/pipeline/: SKILL.md
mcp-package/skills/poke/: SKILL.md
mcp-package/skills/provider/: SKILL.md
mcp-package/skills/research/: SKILL.md  prompt.md
mcp-package/skills/review/: SKILL.md  e2e-interactions.md  prompt.md
mcp-package/skills/review-pr/: SKILL.md
(+573 files in other folders)
