[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clade-mcp"
version = "0.1.0"
description = "MCP server exposing 29 AI coding skills — autonomous commits, loops, reviews, incident response, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Xingy Shen", email = "shenxingy@users.noreply.github.com" },
]
keywords = ["mcp", "claude", "ai", "coding", "skills", "automation", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/shenxingy/clade"
Repository = "https://github.com/shenxingy/clade"
Issues = "https://github.com/shenxingy/clade/issues"

[project.scripts]
clade-mcp = "clade_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clade_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "clade_mcp/skills"
